--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -8,5 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: ./app/gradlew checkstyleMain
-      - run: ./app/gradlew checkstyleTest
+      - run: cd app
+      - run: chmod +x gradlew
+
+      - run: ./gradlew checkstyleMain
+      - run: ./gradlew checkstyleTest
