--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: cd app
+      - run: pwd
       - run: chmod +x gradlew
 
       - run: ./gradlew checkstyleMain
