--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -8,9 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: cd app
-      - run: pwd
-      - run: chmod +x gradlew
+      - run: chmod +x ./app/gradlew
 
-      - run: ./gradlew checkstyleMain
-      - run: ./gradlew checkstyleTest
+      - run: ./app/gradlew checkstyleMain
+      - run: ./app/gradlew checkstyleTest
