--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,11 @@ compileJava {
 }
 
 dependencies {
+    testImplementation 'org.assertj:assertj-core:3.6.1'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'info.picocli:picocli:4.7.5'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 }
 
 test {
