Add tests to Gradle (build.gradle)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,16 @@ checkstyle {
     configFile = rootProject.file('config/checkstyle/checkstyle.xml')
 }
 
+tasks.named('test', Test) {
+    useJUnitPlatform()
+
+    maxHeapSize = '1G'
+
+    testLogging {
+        events "passed"
+    }
+}
+
 compileJava {
     options.release = 20
 }
