--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,20 @@
 name: Java CI
 
-on: [push]
+on:
+  - push
+  - pull_request
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
-
-      - run: chmod +x ./app/gradlew
-
-      - run: ./app/gradlew checkstyleMain
-      - run: ./app/gradlew checkstyleTest
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+      - uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.3
+      - run: ./gradlew build
