--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,6 @@ jobs:
           distribution: 'temurin'
       - uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 8.3
+          gradle-version: 8.2
+      - run: ./gradle wrapper
       - run: ./gradlew build
