--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.2
-      - run: ./gradle wrapper
+      - run: gradle wrapper
       - run: ./gradlew build
