--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           java-version: '20'
           distribution: 'temurin'
-      - uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 8.2
+#      - uses: gradle/gradle-build-action@v2
+#        with:
+#          gradle-version: 8.2
       - run: cd app && ./gradlew build
