--- a/app/Makefile
+++ b/app/Makefile
@@ -1,2 +1,13 @@
+.PHONY: build
+
 run-dist:
 	./build/install/app/bin/app
+
+build:
+	./gradlew build
+
+run:
+	./gradlew run
+
+report:
+	./gradlew jacocoTestReport
