--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,11 @@ jobs:
         with:
           java-version: '20'
           distribution: 'temurin'
-#      - uses: gradle/gradle-build-action@v2
-#        with:
-#          gradle-version: 8.2
       - run: cd app && ./gradlew build
+        uses: paambaati/codeclimate-action@v5.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: app/src/main/java
+        with:
+           coverageCommand: cd app && make report
+           coverageLocations: ${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
